welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:32: error: not found: value i
		if(i == 6 && j == 6){pos = true}
                   ^